// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign and verify data #signDataWithPrivateKey should sign data 1`] = `
{
  "data": [
    206,
    246,
    95,
    100,
    148,
    133,
    216,
    1,
    45,
    52,
    134,
    42,
    79,
    123,
    172,
    238,
    49,
    181,
    239,
    249,
    54,
    131,
    129,
    170,
    80,
    156,
    109,
    117,
    6,
    10,
    135,
    129,
    17,
    252,
    2,
    124,
    69,
    122,
    204,
    159,
    98,
    172,
    113,
    107,
    144,
    7,
    201,
    88,
    118,
    254,
    29,
    4,
    53,
    214,
    169,
    169,
    70,
    208,
    167,
    148,
    14,
    167,
    85,
    8,
  ],
  "type": "Buffer",
}
`;

exports[`sign and verify message #signMessageWithPrivateKey should create a signed message using a private key 1`] = `
{
  "message": "Some default text.",
  "publicKey": {
    "data": [
      126,
      244,
      92,
      213,
      37,
      233,
      91,
      122,
      134,
      36,
      75,
      189,
      78,
      180,
      85,
      9,
      20,
      173,
      6,
      48,
      16,
      19,
      149,
      143,
      77,
      214,
      77,
      50,
      239,
      123,
      197,
      136,
    ],
    "type": "Buffer",
  },
  "signature": {
    "data": [
      101,
      83,
      52,
      28,
      189,
      62,
      183,
      117,
      93,
      228,
      224,
      155,
      78,
      221,
      58,
      251,
      134,
      48,
      137,
      65,
      117,
      231,
      130,
      89,
      106,
      245,
      247,
      238,
      46,
      123,
      100,
      206,
      97,
      189,
      94,
      228,
      38,
      79,
      228,
      18,
      250,
      216,
      105,
      132,
      9,
      17,
      149,
      206,
      61,
      205,
      213,
      33,
      36,
      80,
      161,
      95,
      41,
      138,
      152,
      114,
      231,
      58,
      49,
      5,
    ],
    "type": "Buffer",
  },
}
`;

exports[`sign and verify message #signMessageWithPrivateKey should create a signed message using a private key and a custom tag 1`] = `
{
  "message": "Some default text.",
  "publicKey": {
    "data": [
      126,
      244,
      92,
      213,
      37,
      233,
      91,
      122,
      134,
      36,
      75,
      189,
      78,
      180,
      85,
      9,
      20,
      173,
      6,
      48,
      16,
      19,
      149,
      143,
      77,
      214,
      77,
      50,
      239,
      123,
      197,
      136,
    ],
    "type": "Buffer",
  },
  "signature": {
    "data": [
      159,
      100,
      115,
      189,
      71,
      39,
      154,
      182,
      97,
      187,
      151,
      128,
      153,
      144,
      99,
      233,
      218,
      253,
      76,
      187,
      94,
      226,
      36,
      71,
      43,
      47,
      233,
      15,
      252,
      112,
      34,
      76,
      80,
      38,
      13,
      125,
      173,
      123,
      124,
      0,
      222,
      165,
      81,
      141,
      228,
      232,
      122,
      104,
      205,
      99,
      180,
      130,
      117,
      120,
      149,
      86,
      166,
      27,
      179,
      43,
      149,
      201,
      29,
      2,
    ],
    "type": "Buffer",
  },
}
`;
